--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^7.0.2",
     "@guardian/interactive-component-library": "0.1.0-alpha.20",
+    "@guardian/interactive-source-components": "github:guardian/interactive-source-components",
     "@guardian/source": "^0.0.0-canary-20251017113830",
     "@sveltejs/svelte-scroller": "^2.0.7",
     "chroma-js": "^3.1.2",
