--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "postinstall": "git config core.hooksPath .githooks",
     "build": "node scripts/build.js",
-    "dev": "vite",
+    "dev": "PANDA_TOKEN=$(osascript ./scripts/utils/getAuthToken.applescript) vite",
     "lint": "eslint .",
     "format": "prettier . --check",
     "start": "vite"
@@ -44,13 +44,12 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^7.0.2",
     "@guardian/interactive-component-library": "0.1.0-alpha.20",
-    "@guardian/interactive-source-components": "github:guardian/interactive-source-components",
-    "@guardian/source": "^0.0.0-canary-20251017113830",
+    "@guardian/source": "^0.0.0-canary-20251211132947",
     "@sveltejs/svelte-scroller": "^2.0.7",
+    "preact": "^10.19.6",
     "chroma-js": "^3.1.2",
     "d3": "^7.9.0",
     "hls.js": "^1.6.14",
-    "preact": "^10.19.6",
     "shaka-player": "^4.16.8",
     "subtitles-parser": "^0.0.2",
     "topojson-client": "^3.1.0"
