--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "@guardian/interactive-component-library": "0.1.0-alpha.20",
     "@guardian/source": "^0.0.0-canary-20251211132947",
     "@sveltejs/svelte-scroller": "^2.0.7",
-    "preact": "^10.19.6",
     "chroma-js": "^3.1.2",
     "d3": "^7.9.0",
     "hls.js": "^1.6.14",
+    "preact": "^10.19.6",
     "shaka-player": "^4.16.8",
+    "smoothscroll-polyfill": "^0.4.4",
     "subtitles-parser": "^0.0.2",
     "topojson-client": "^3.1.0"
   },
