--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chroma-js": "^3.1.2",
     "d3": "^7.9.0",
     "hls.js": "^1.6.14",
+    "maplibre-gl": "^5.15.0",
     "preact": "^10.19.6",
     "shaka-player": "^4.16.8",
     "smoothscroll-polyfill": "^0.4.4",
